--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@okta/okta-react": "^2.0.0",
+    "@okta/okta-signin-widget": "^3.8.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
-    "acorn": "^7.1.1",
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
     "puppeteer": "^2.1.1",
@@ -21,7 +22,7 @@
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
