--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
     "puppeteer": "^2.1.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-hook-form": "^4.10.2",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
