--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@testing-library/user-event": "^7.1.2",
     "acorn": "^7.1.1",
     "axios": "^0.19.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.0",
     "puppeteer": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -35,7 +35,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "node-sass": "node-sass --watch --output-style compressed -o css src/scss"
   },
   "eslintConfig": {
     "extends": "react-app"
