--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.13.1",
     "puppeteer": "^2.1.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-hook-form": "^4.10.2",
