OKTA Authentication     *Axios with auth modified to work with accessToken from okta api     *Every instance of AxiosWithAuth has been given an AccessToken as parameter in actions     *login page needs to be edited to redirect to okta login screen     *login page code commented out, needs to be taken out and replace with okta redirect

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.46",
     "@material-ui/styles": "^4.9.10",
+    "@okta/okta-react": "^3.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
     "acorn": "^7.1.1",
     "axios": "^0.19.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "puppeteer": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
