--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^7.1.2",
     "acorn": "^7.1.1",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "node-sass": "^4.14.1",
     "puppeteer": "^2.1.1",
     "react": "^16.13.1",
