--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "use-state-with-callback": "^1.0.18",
     "yup": "^0.28.3"
   },
   "scripts": {
